<resources>
    <string name="app_name">SlashAir</string>
    <string name="hello_world">Hello world!!!!!!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="login_label">login</string>
    <string name="no_connection">There is no internet connection</string>
    <string name="error_invalid_username_or_password">Invalid username or password</string>
    <string name="phone_number_label">phone number</string>
    <string name="airtime_label">amount</string>
    <string name="send_aitime_label">send airtime</string>
    <string name="endpoint_url">http://www.slashair.com/</string>
    <string name="recent_transaction_section">Transactions</string>
    <string name="quick_topup_section">send airtime</string>
    <string name="balance_section">Balance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">example</string>
    <string name="loginout_label">Log out</string>
    <string name="logout_section">Log out</string>
</resources>
